--- a/indexhtml/index.html
+++ b/indexhtml/index.html
@@ -21,7 +21,7 @@
     
     <!-- รูปภาพตนเอง -->
     <h2>รูปภาพ</h2>
-    <img src="22222.png" alt="Ken" width="300" height="300">
+    <img src="indexhtml/22222.png" alt="Ken" width="300" height="300">
     <p><em></em></p>
     
     <hr>
