--- a/indexhtml/index.html
+++ b/indexhtml/index.html
@@ -86,7 +86,7 @@
     
     <!-- รูปภาพที่น่าสนใจ -->
     <h2>รูปภาพที่น่าสนใจ</h2>
-    <img src="r.jpg" alt="รูปภาพเกี่ยวกับ Web Development" width="600" height="400">
+    <img src="indexhtml/r.jpg" alt="รูปภาพเกี่ยวกับ Web Development" width="600" height="400">
     <p><em></em></p>
     
     <hr>
