--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     
     <!-- รูปภาพตนเอง -->
     <h2>รูปภาพ</h2>
-    <img src="img/22222.png" alt="Ken" width="300" height="300">
+    <img src="22222.png" alt="Ken" width="300" height="300">
     <p><em></em></p>
     
     <hr>
@@ -97,4 +97,5 @@
         <p><small>GitHub Page Assignment | HTML Only Version</small></p>
     </footer>
 </body>
+
 </html>
